# SGIO-repo

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  USDA_descriptions.csv
data/crosswalks/: nhanes_categoricals_manual.json  nhanes_selected_cols.json
experiments/: README.md  cohort_validation.py  plot_validation.py  single_respondent.py
food-similarity-scoring/: .env.example  .gitignore  README.md  collect-data.sh  config.toml  pyproject.toml
food-similarity-scoring/data-processing/: nhanes_download.py  nhanes_meta.py  nhanes_process.py  usda.py
food-similarity-scoring/food_similarity/: ai4fooddb.py  app.py  config.py  data.py  dietary_rules.py  embedding.py  eval_routes.py  eval_store.py  index.py  llm.py  meal_context_scorer.py  myfitnesspal.py  nhanes.py  pipeline.py  precomputed.py  preference_scorer.py  reranker.py  search_request.py  signals.py  usda.py
food-similarity-scoring/food_similarity/templates/: eval.html  mapping.html  personalized.html  search.html  similarity.html
food-similarity-scoring/scripts/: analyze_eval.py  build_index.py  build_similarity_matrix.py  map_databases.py  refine_similarity.py  run_automated_eval.py
notebooks/: 01_nhanes_pipeline_demo.ipynb  02_nhanes_il_models.ipynb  03_mfp_paper_analysis.ipynb  04_mfp_final_outputs.ipynb  README.md
paper/: README.md  main.tex
results/: README.md  smgil_all_diets.csv  smgil_day2_validation.csv  smgil_mfp_temporal_validation.csv
results/tables/: mfp_cohort_summary_table.tex  mfp_final_table.tex  table1_nutrient_intake_93705.tex  (+5 more)
similarity/: README.md
(+23 files in other folders)
